fix(lading page ge / gv): responsive layout fixed

--- a/src/app/landing-page-ge/landing-page-ge.component.scss
+++ b/src/app/landing-page-ge/landing-page-ge.component.scss
@@ -411,6 +411,7 @@ header {
         display:flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         h3 {
             font-size: 1.65em;
         }
