--- a/src/app/form-gt-embedded/form-gt-embedded.component.html
+++ b/src/app/form-gt-embedded/form-gt-embedded.component.html
@@ -250,12 +250,12 @@
                 <div class="row justify-content-center forms-term autocomplete-negative-index2">
                   <div class="col-sm-12">
                     <div>
-                      <div class='forms-terms-area' (click)='openModal()'>
+                      <div class='forms-terms-area'>
                         <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
                         <label class='forms-tem-accepted info-mobile-content'>
                           Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
                           <br>
-                          <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
+                          <span style='text-decoration: underline; cursor: pointer;' (click)='openModal()'> Para ler os termos, basta clicar aqui. </span>
                         </label>
                       </div>
                     </div>
