chore(forms * embedded): unbounce forms fixed

--- a/src/app/form-gt-embedded/form-gt-embedded.component.scss
+++ b/src/app/form-gt-embedded/form-gt-embedded.component.scss
@@ -1799,9 +1799,10 @@ label {
 
 @media (min-width: 1440px) {
     div.form-talentos-globais {
+        height: 100vh;
         &:not(.full-screen) {
-            transform: scale(1.175);
-            margin: 15vh 0;
+            transform: scale(1.5);
+            transform-origin: 0% 0%; 
         }
     }
 }
