--- a/src/app/form-ge-embedded/form-ge-embedded.component.scss
+++ b/src/app/form-ge-embedded/form-ge-embedded.component.scss
@@ -1597,9 +1597,10 @@ label {
 }
 @media (min-width: 1440px){
     div.form-talentos-globais {
-        &:not(.full-screen){
-            transform: scale(1.2);
-            margin: 15vh 0;
+        height: 100vh;
+        &:not(.full-screen) {
+            transform: scale(1.5);
+            transform-origin: 0% 0%;
         }
     }
 }
