--- a/src/app/form-gv-embedded/form-gv-embedded.component.scss
+++ b/src/app/form-gv-embedded/form-gv-embedded.component.scss
@@ -1782,9 +1782,10 @@ label {
 
 @media (min-width: 1440px) {
     div.form-volutario-global {
+        height: 100vh;
         &:not(.full-screen) {
-            transform: scale(1.2);
-            margin: 15vh 0;
+            transform: scale(1.5);
+            transform-origin: 0% 0%;
         }
     }
 }
