--- a/src/app/form-offline-embedded/form-offline-embedded.component.scss
+++ b/src/app/form-offline-embedded/form-offline-embedded.component.scss
@@ -1814,9 +1814,10 @@ label {
 
 @media (min-width: 1440px) {
     div.form-offline {
+        height: 100vh;
         &:not(.full-screen) {
-            transform: scale(1.175);
-            margin: 15vh 0;
+            transform: scale(1.5);
+            transform-origin: 0% 0%; 
         }
     }
 }
