fix(*): visual issues fixed
AIESEC-323 - https://devmagic.atlassian.net/browse/AIESEC-323

--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -15,7 +15,7 @@
           </select>
           <div *ngIf='contact' class='contact-details'>
             <b>
-              AIESEC EM <span>{{ contact.city }}</span>
+              AIESEC EM {{ contact.city }}
             </b>
             <span>
               {{ contact.name }}
