--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
 
-              <div class='col-1'>
+              <div class='search-btn col-1'>
                 <button class='button with-background default border-bottom' (click)='getZipcode(user.cep)'>
                   <i class="fas fa-search"></i>
                 </button>
