--- a/src/app/form-host/form-host.component.scss
+++ b/src/app/form-host/form-host.component.scss
@@ -988,7 +988,7 @@ label {
         height: 40px;
     }
     #signUp {
-        button {
+        .search-btn button {
             height: 40px !important;
             i {
                 margin-left: -15px !important;
