--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -11,6 +11,9 @@
   <section class="product-description padding-top-and-bottom">
     <div class="container">
       <div class="row">
+        <div class='col-lg-4 col-sm-12 col-md-12 logo-container'>
+          <div class='colored-logo'></div>
+        </div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
           <h2 class="bold">
             Visão geral do programa
@@ -20,7 +23,7 @@
 
 É sua chance de <strong>colocar em prática uma língua estrangeira</strong>, viver novas experiências e <strong>trocas culturais</strong>, criar <strong>conexões internacionais</strong> e, principalmente, <strong>viver a diversidade</strong>!<br/><br/>
 
-Confira no vídeo ao lado o relato de um de nossos participantes!
+Confira no vídeo o relato de um de nossos participantes!
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -108,7 +111,7 @@ Confira no vídeo ao lado o relato de um de nossos participantes!
   <section class="faq middle1 padding-top-and-bottom">
     <div class="container">
       <div class="row">
-        <div class="faq-info col-lg-7 col-sm-12 col-md-12">
+        <div class="faq-info col-lg-7 col-sm-12 col-md-12 margin-top-and-bottom">
           <h2 class='bold'>
             FAQ - Dúvidas Frequentes
           </h2>
@@ -145,13 +148,13 @@ Confira no vídeo ao lado o relato de um de nossos participantes!
       </div>
     </div>
   </section>
-  <section class='know-aiesec with-background host padding-top-and-bottom'>
+  <section class='know-aiesec with-background host'>
     <div class="container">
       <div class="row">
         <div class="aiesec-image background-default col-lg-6 col-sm-12 col-md-12">
           <div class="round icon circle"></div>
         </div>
-        <div class="aiesec-info col-lg-6 col-sm-12 col-md-12">
+        <div class="aiesec-info col-lg-6 col-sm-12 col-md-12 margin-top-and-bottom">
           <div class="row">
             <div class='col-12'>
               <h1>
