--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -11,7 +11,7 @@
   <section class="product-description padding-top-and-bottom">
     <div class="container">
       <div class="row">
-        <div class='col-lg-4 col-sm-12 col-md-12 logo-container'>
+        <div class='col-md-12 logo-container'>
           <div class='colored-logo'></div>
         </div>
         <div class="description col-lg-7 col-sm-12 col-md-12">
@@ -25,7 +25,7 @@
 
 Confira no vídeo o relato de um de nossos participantes!
         </div>
-        <div class="col-lg-5 col-sm-12 col-md-12">
+        <div class="col-lg-5 col-sm-12 col-md-12 margin-top-and-bottom">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
