fix(forms *): email (message and pattern) fixed

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -62,7 +62,7 @@
                   <i class="fas fa-check"></i>
                 </div>
                 <div *ngIf="isValid('email')" class='error-message'>
-                  Preencha com o seu email.
+                  Por favor, preencha com um email válido.
                 </div>
               </div>
             </div>
