--- a/src/app/form-ge-embedded/form-ge-embedded.component.html
+++ b/src/app/form-ge-embedded/form-ge-embedded.component.html
@@ -90,7 +90,7 @@
                     </div>
                   </div>
                   <div *ngIf="isValid('email')" class='error-message'>
-                    Preencha com o seu email.
+                    Por favor, preencha com um email válido.
                   </div>
                 </div>
                 <div class="form-group">
