--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -156,7 +156,7 @@
                     </div>
                   </div>
                   <div *ngIf="isValidPersonal('email')" class='error-message'>
-                    Preencha com o seu email.
+                    Por favor, preencha com um email válido.
                   </div>
                 </div>
                 <div class="form-group">
