--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -326,18 +326,60 @@ ul#menu {
 }
 
 @media (max-width: 990px) {
+    #fixedMenu {
+        background-color: white;
+        height: 50px;
+        box-shadow: 0 3px 6px rgba(0,0,0,.16);
+        transition: top .5s linear;
+        i {
+            font-weight: bold;
+            font-size: 25px;
+            color: #037ef3;
+            margin: 0px;
+        };
+        .aiesec-favicon {
+            height: 40px;
+            width: 40px;
+            background-image: url(../../assets/images/favicon-white.png);
+            background-size: contain;
+            position: fixed;
+            top: 5px;
+            left: 20px;
+        };
+        .favicon-arrow {
+            position: fixed;
+            top: 10px;
+            left: 56px;
+            color: gray;
+            font-size: 18px;
+        };
+        .logo-aiesec {
+            display: none;
+        };
+        button {
+            font-size: 10px;
+            position: fixed;
+            top: 12px;
+            right: 20px;
+            font-weight: bold;
+        }
+    }
+
+    #bg-menu {
+        background-color: transparent;
+    }
+
     .header-product div.responsive-menu ul#menu {
         display: none !important;
     }
 
     .header-product div.responsive-menu .menu-icon {
-        display: block;
+        background-color: white;
         position: fixed;
-        right: 35px;
-        top: 15px;
-        color: $default;
-        z-index: 100;
-        font-size: 25px;
+        width: 100%;
+        height: 55px;
+        top: 0;
+        left: 0;
 
         .fa-times, .fa-bars {
             color: #fff;
@@ -400,6 +442,89 @@ ul#menu {
     #fixedMenu.fixedMenu .logo-aiesec {
         margin: 15px 0;
     }
+
+    .navbar-mobile-flex {
+        width: 100%;
+        height: 50px;
+        padding: 0 10px;
+        background-color: #fff;
+        border-radius: 0;
+        box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        z-index: 998;
+    }
+
+    .mobile-dropdown-menu {
+        position: fixed;
+        top: 50px;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        transition: max-height .5s ease-in-out;
+        background: #e5feff;
+        overflow: hidden;
+    }
+
+    .mobile-dropdown-menu.vis {
+        max-height: 100%;
+        background-color: rgba(0,0,0,.7);
+    }
+
+    .mobile-dropdown-menu .mobile-dropdown-container {
+        box-shadow: inset 0 7px 12px -10px #8f8f8f;
+        background-color: #fff;
+        padding: 30px 20px;
+        overflow-y: scroll;
+        max-height: 450px
+    }
+
+    .mobile-dropdown-menu .mobile-dropdown-container .mobile-nav-menu {
+        list-style: none;
+        padding: 0 15px;
+    }
+
+    .mobile-dropdown-menu .mobile-dropdown-container .mobile-nav-menu .menu-item {
+        font-size: 20px;
+        padding: 7px 0;
+        color: #555;
+        font-weight: 300;
+    }
+
+    .mobile-dropdown-menu .mobile-dropdown-container .mobile-nav-menu .menu-header {
+        font-weight: bold !important;
+        font-size: 20px !important;
+    }
+
+
+    hr {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        border: 0;
+        border-top: 1px solid rgba(0,0,0,.1);
+        box-sizing: content-box;
+        height: 0;
+        overflow: visible;
+    }
+
+    .menu-product {
+        li {
+            font-size: 20px !important;
+            padding: 7px 0 !important;
+            color: #555 !important;
+            font-weight: 300 !important;
+        }
+        ul {
+            display: table !important;
+        }
+    }
+
+
+
 }
 
 @media (min-width:990px) {
@@ -408,6 +533,7 @@ ul#menu {
     .active-responsive-menu {
         display: none !important;
     }
+
 }
 
 @media only screen and (min-width: 1280px) {
