Revert "fix(forms *): email (message and pattern) fixed"

--- a/src/app/form-gv-embedded/form-gv-embedded.component.html
+++ b/src/app/form-gv-embedded/form-gv-embedded.component.html
@@ -89,7 +89,7 @@
                     </div>
                   </div>
                   <div *ngIf="isValid('email')" class='error-message'>
-                    Por favor, preencha com um email válido.
+                    Preencha com o seu email.
                   </div>
                 </div>
                 <div class="form-group">
