--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -119,7 +119,7 @@
                     </div>
                   </div>
                   <div *ngIf="isValidPersonal('email')" class='error-message'>
-                    Por favor, preencha com um email válido.
+                    Preencha com o seu email.
                   </div>
                 </div>
                 <div class="form-group">
