fix(landing-page-menu): visual issues fix

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -16,7 +16,7 @@
               <i class="far fa-chevron-up favicon-arrow" *ngIf="responsiveMenu"></i>
             </div>
             <a class='aiesec-search' href='https://aiesec.org/search' target="_blank">
-              <button type="button" class="btn btn-primary">Veja as oportunidades</button>
+              <button type="button" class="btn btn-primary">Veja nossas oportunidades</button>
             </a>
           </div>
           <ul id="menu">
