fix(landing-page-host): fixed margin and bottom spacing

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -8,7 +8,7 @@
 
   <app-landing-page-menu></app-landing-page-menu>
 
-  <section class="product-description padding-top-and-bottom">
+  <section class="product-description padding-top-and-bottom-host">
     <div class="container">
       <div class="row">
         <div class='col-md-12 logo-container'>
@@ -25,7 +25,7 @@
 
 Confira no vídeo o relato de um de nossos participantes!
         </div>
-        <div class="col-lg-5 col-sm-12 col-md-12 margin-top-and-bottom">
+        <div class="col-lg-5 col-sm-12 col-md-12 margin-top-and-bottom-host">
           <iframe width="100%" height="315" src="https://www.youtube.com/embed/80D5Gra4QSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
@@ -33,7 +33,7 @@ Confira no vídeo o relato de um de nossos participantes!
     </div>
   </section>
 
-  <section class="faq middle2 padding-top-and-bottom">
+  <section class="faq middle2 padding-top-and-bottom-host">
     <div class="container">
       <div class="row">
         <div class="faq-image background-default col-lg-5 col-sm-12 col-md-12">
@@ -108,10 +108,10 @@ Confira no vídeo o relato de um de nossos participantes!
     </div>
   </section>
 
-  <section class="faq middle1 padding-top-and-bottom">
+  <section class="faq middle1 padding-top-and-bottom-host">
     <div class="container">
       <div class="row">
-        <div class="faq-info col-lg-7 col-sm-12 col-md-12 margin-top-and-bottom">
+        <div class="faq-info col-lg-7 col-sm-12 col-md-12 margin-top-and-bottom-host">
           <h2 class='bold'>
             FAQ - Dúvidas Frequentes
           </h2>
@@ -154,7 +154,7 @@ Confira no vídeo o relato de um de nossos participantes!
         <div class="aiesec-image background-default col-lg-6 col-sm-12 col-md-12">
           <div class="round icon circle"></div>
         </div>
-        <div class="aiesec-info col-lg-6 col-sm-12 col-md-12 margin-top-and-bottom">
+        <div class="aiesec-info col-lg-6 col-sm-12 col-md-12 margin-top-and-bottom-host">
           <div class="row">
             <div class='col-12'>
               <h1>
