--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -232,9 +232,15 @@ div {
 // sections
 section, footer, div {
     &.margin-top-and-bottom {
-        margin: 35px 0 !important;
+        margin: 75px 0 !important;
     }
     &.padding-top-and-bottom {
+        padding: 75px 0 !important
+    }
+    &.margin-top-and-bottom-host {
+        margin: 35px 0 !important;
+    }
+    &.padding-top-and-bottom-host {
         padding: 35px 0 !important
     }
     &.with-background {
