fix(app.component): changed cookies policy text

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   	</div>
     <div class="row">
     	<div class="col-md-9 message">
-    		<p>Utilizamos cookies proprias y de terceros para mejorar nuestros servicios y mostrarte publicidad relacionada con tus preferencias mediante el análisis de tus hábitos de navegacíon y la generacíon de los correspondientes perfiles. Si seguís navegando en nuestro sitio, consideramos que aceptás su uso.
+    		<p>Utilizamos cookies propias y de terceros para mejotar nuestros servicios. sí seguís navegando en nuestro sitio consideramos que aceptas su uso.
     		<a href="../../assets/politica_cookies_esar.pdf" target="_blank">
 		      <u>Ver más</u>
 		    </a>
