--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -394,7 +394,7 @@
                   </div>
                 </div>
             
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
                       <div class="input-group-text">
@@ -405,13 +405,12 @@
                     <input type="file" class="form-control" [(ngModel)]="user.curriculum" (change)="onFileChange($event)" formControlName="curriculum"
                     />
             
-                    <!-- mobile -->
                     <i class="fas fa-file mobile mobile-icon"></i>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form-group getToKnow">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
