--- a/src/app/terms/terms.component.scss
+++ b/src/app/terms/terms.component.scss
@@ -14,6 +14,11 @@
     z-index: 1000;
 }
 
+h3 {
+    text-align: center;
+    font-size: 22px;
+}
+
 h1 {
     font-size: 18px
 }
@@ -54,4 +59,8 @@ main {
     min-width: 100%;
     *width: 100%;
     overflow: auto;
+}
+
+ul {
+    list-style: none;
 }
