chore(landing-footer, landing-page-menu): changed 'Seguro Saude' to 'Segura Viagem'
AIESEC-340 - https://devmagic.atlassian.net/browse/AIESEC-340

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -106,7 +106,7 @@
                 <a href="https://www.confidencecambio.com.br/ecommerce/?utm_source=barra&utm_medium=home#/home?_k=9twr7h" target="_blank">Câmbio de Moedas</a>
               </p>
               <p>
-                <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">Seguro Saúde</a>
+                <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">Seguro Viagem</a>
               </p>
             </div>
           <div class="footer-group-links col-md-3 col-sm-6">
