--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -67,7 +67,7 @@
                 </a>
                 <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">
                   <li>
-                    Seguro Saúde
+                    Seguro Viagem
                   </li>
                 </a>
               </ul>
@@ -158,7 +158,7 @@
                   </a>
                   <a href="https://www.assistcard.com/br/b2c/aiesec-br" target="_blank">
                     <li>
-                      Seguro Saúde
+                      Seguro Viagem
                     </li>
                   </a>
                 </ul>
