chore(landing-page-ge, landing-page-gt, landing-page-gv): changed "Seguro Viagem" to "Seguro Saúde"

--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -155,10 +155,10 @@
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Preciso de seguro viagem para viajar?
+                Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro viagem é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
               </p>
