fix(landing-page-menu, form-gv): changed header images and added it to gv embedded form
ARG-68 - https://devmagic.atlassian.net/browse/ARG-68

--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -3,9 +3,13 @@
 </head>
 
 <div id="step1" class="form-volutario-global relative-form" [ngClass]="{'full-screen': formedUser, 'full-screen-embedded': embeddedForm}">
+
   <div class="full-width">
     <!-- Header -->
-    <section class="header" id="header-voluntario-global">
+    <section class="header" id="header-voluntario-global">     
+
+      <div class="friend-day-header"></div>
+
       <div class="container">
         <div class="row justify-content-center" *ngIf="!embeddedForm">
           <div class="col-sm text-center">
