--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
 <main>
   <app-landing-page-menu></app-landing-page-menu>
   <div class="row global-columns" id="global">
-    <div class="col-lg-4 col-sm-12 column-1 align-center">
+    <div class="col-lg-12 col-sm-12 column-1 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -12,7 +12,7 @@
         </picture>
         <p class="desktop" i18n="@@landingGvAboutDesktop">
           Ser um voluntário global é transformar
-          <br> seus valores em ação e fazer a diferença
+          seus valores em ação e fazer a diferença
           <br> em diversas regiões do mundo.
         </p>
         <p class="mobile" i18n="@@landingGvAboutMobile">
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12 column-2 align-center">
+    <div class="col-lg-6 col-sm-12 column-2 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12 column-3 align-center">
+    <div class="col-lg-6 col-sm-12 column-3 align-center">
       <div class="bg-color"></div>
       <div class="bg-content">
         <picture>
