--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -373,7 +373,7 @@
                     Por favor, informe onde deseja viver a experiência
                   </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
                       <div class="input-group-text">
@@ -382,15 +382,15 @@
                       </div>
                     </div>
                     <input type="file" class="form-control" [(ngModel)]="user.curriculum" (change)="onFileChange($event)" formControlName="curriculum"
-                    />
-            
-                    <!-- mobile -->
+                    /> -->
+
+                    <!-- mobile
                     <i class="fas fa-file mobile mobile-icon"></i>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form-group getToKnow">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
