chore(landing-page-countries, landing-page-subproducts): redirect to form in GT
AIESEC-342 - https://devmagic.atlassian.net/browse/AIESEC-342

--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.html
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.html
@@ -25,7 +25,8 @@
           <p>
             {{ subproduct.description }}
           </p>
-          <a href='{{subproduct.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank"> Ver oportunidades </a>
+          <a href='{{subproduct.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank" *ngIf="actualPage != 'talento-global'"> Ver oportunidades </a>
+          <a [ngx-scroll-to]="'#form'" [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank" *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
         </div>
       </div>
     </div>
