chore(landing-page-gv): added new item "Comida y Alojamiento" into benefits section
ARG-70 - https://devmagic.atlassian.net/browse/ARG-70

--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -176,6 +176,9 @@
           <div class="round icon circle"></div>
         </div>
         <div class="aiesec-info col-lg-7 col-sm-12 col-md-12">
+          <h2 class='bold darker' i18n="@@programAboutTitle">
+            Benefícios
+          </h2>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
               <div class="round circle icon without-background gv"></div>
@@ -187,6 +190,19 @@
               <p class="lighter lower" i18n="@@programAboutItem1Text">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-2 col-md-12 col-sm-12 centered">
+              <div class="round circle icon without-background gv"></div>
+            </div>
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h3 class="bold line-height-lower darker" i18n="@@programAboutItem5Title">
+                Comida e alojamento
+              </h3>
+              <p class="lighter lower" i18n="@@programAboutItem5Text">
+                Muitas das oportunidades disponíveis em nossas plataformas oferecem pelo menos 1 refeição por dia e acomodação sem custos, geralmente em uma casa de família.
               </p>
             </div>
           </div>
